[package]
name = "image_viewer"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.98"
image = "0.25.6"
softbuffer = { version = "0.4.6", default-features = false, features = ["wayland", "wayland-dlopen", "kms"] }
winit = { version = "0.30.9", default-features = false, features = ["wayland", "wayland-dlopen", "rwh_06"] }

[profile.release]
opt-level = 2
debug = false
incremental = false
lto = true          # Enable link-time optimization
codegen-units = 1   # Reduce number of codegen units to increase optimizations
panic = 'abort'     # Abort on panic
strip = true        # Strip symbols from binary*

[profile.dev]
debug = true
opt-level = 0
